# termin-mesh

./: CMakeLists.txt  setup.py
.github/workflows/: ci.yml
cmake/: termin_meshConfig.cmake.in
include/tgfx/: tc_registry_utils.h  tgfx_mesh3.hpp  tgfx_mesh_handle.hpp  tgfx_vec3.hpp
include/tgfx/resources/: tc_mesh.h  tc_mesh_registry.h  tc_resource.h
python/: CMakeLists.txt
python/bindings/: mesh_bindings.cpp  tmesh_module.cpp
python/tmesh/: __init__.py
python/tmesh/include/tgfx/: tgfx_api.h  tgfx_mesh_handle.hpp  tgfx_types.h
python/tmesh/include/tgfx/resources/: tc_mesh.h  tc_mesh_registry.h
src/: tgfx_mesh_handle.cpp  tgfx_types.c
src/resources/: tc_mesh.c  tc_mesh_registry.c
