find_package(Python 3.8 COMPONENTS Interpreter Development REQUIRED)

execute_process(
    COMMAND ${Python_EXECUTABLE} -m nanobind --cmake_dir
    OUTPUT_VARIABLE nanobind_DIR
    OUTPUT_STRIP_TRAILING_WHITESPACE
)
find_package(nanobind CONFIG REQUIRED)

nanobind_add_module(_tmesh_native
    bindings/tmesh_module.cpp
    bindings/mesh_bindings.cpp
)

target_link_libraries(_tmesh_native PRIVATE termin_mesh)
target_include_directories(_tmesh_native PRIVATE ${CMAKE_SOURCE_DIR}/include)

if(NOT WIN32)
    set_target_properties(_tmesh_native PROPERTIES
        BUILD_WITH_INSTALL_RPATH TRUE
        INSTALL_RPATH "$ORIGIN/lib"
    )
endif()
